--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the World of Cyber Security</title>
+    <title>Dynamic Cyber Security Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,18 +19,19 @@
             <h2>Why is Cyber Security Important?</h2>
             <p>In today's connected world, everyone benefits from advanced cyber defense programs. At an individual level, a cyber security attack can result in everything from identity theft to extortion attempts, to the loss of important data like family photos. Everyone relies on critical infrastructure such as power plants, hospitals, and financial service companies. Securing these and other organizations is essential to keeping our society functioning.</p>
         </section>
-        <section>
-            <h2>Best Practices</h2>
-            <ul>
-                <li>Use strong passwords and change them regularly.</li>
-                <li>Keep software updated.</li>
-                <li>Be cautious of email attachments and links.</li>
-                <li>Use security software and keep it updated.</li>
-            </ul>
+        <section id="dynamic-section">
+            <h2>Share Your Thoughts</h2>
+            <form id="input-form">
+                <label for="user-input">Your Thoughts:</label>
+                <input type="text" id="user-input" name="user-input" required>
+                <button type="submit">Submit</button>
+            </form>
+            <div id="display-area"></div>
         </section>
     </main>
     <footer>
         <p>&copy; 2025 Cyber Security</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
